Fixed css issues for iOS, including screen overlapping with phone status bar, modal-dialig, offcanvas.

--- a/styles/bootstrapOverride.css
+++ b/styles/bootstrapOverride.css
@@ -1,3 +1,19 @@
+body {
+  padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px);
+}
+
+.offcanvas.offcanvas-start {
+  top: env(safe-area-inset-top, 0px);
+}
+
+.modal-dialog {
+  top: env(safe-area-inset-top, 0px);
+}
+
+.pswp {
+  top: env(safe-area-inset-top, 0px);
+}
+
 pre {
     display: block;
     padding: 13px;
